<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    tools:context="com.example.user.apptime.InsertCategoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categoty_name"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/etCategoryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/ivCategoryIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_attach_file"
                android:onClick="onClickChoose" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_icon"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp"
            android:layout_marginTop="15dp"/>


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0"
        android:layout_marginBottom="5dp">
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="15dp"
        android:layout_weight="0.6"
        android:background="@color/colorRed"
        android:onClick="back"
        android:text="Отмена"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/btnInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:background="@color/colorGreen"
        android:onClick="onClickSave"
        android:text="@string/save"
        android:textColor="@color/colorWhite" />
    </LinearLayout>

</LinearLayout>
